# porg-2002-practice

./: .gitmodules  CMakeLists.txt  README.md
framework/: CMakeLists.txt
framework/GLFWApplication/: GLFWApplication.cpp  GLFWApplication.h
framework/GeometricTools/: GeometricTools.h
framework/Projection/: CMakeLists.txt  Matrices.cpp  Matrices.h  MatrixOperations.h
framework/Rendering/: BufferLayout.h  CMakeLists.txt  Camera.h  IndexBuffer.cpp  IndexBuffer.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  RenderCommands.h  Shader.cpp  Shader.h  TextureManager.cpp  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
game/: CMakeLists.txt  Game.cpp  Game.h  GameObjectData.h  main.cpp
renderer/: CMakeLists.txt  Renderer.cpp  Renderer.h  ShaderDefenitionsPlayer.h  ShaderDefenitionsWorld.h
